# LangChain-Dynamic-Tool-Router-for-Agents-

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RTK.md  SECURITY.md  feature_list.json  package-lock.json  pyproject.toml
adr/: 001-standalone-product-using-harness-sdlc-authority.md  002-file-backed-policy-and-audit-store.md  003-optional-framework-integration-tests.md  004-ship-mode-sellable-developer-preview.md  005-product-landing-page-strategy.md  005-readme-as-product-landing-page.md  007-architecture-visual-language.md  008-demo-experience-strategy.md  010-release-candidate-polish.md  011-security-whitepaper-strategy.md  012-design-partner-kit-strategy.md  013-pricing-and-landing-copy-strategy.md  014-stripe-entitlement-billing.md  015-billing-provider-abstraction.md  016-vscode-marketplace-extension.md
docs/: admin-dashboard.md  architecture.md  audit-log-format.md  commercial-launch-runbook.md  demo-guide.md  design-partner-kit.md  langchain-integration.md  langchain-langgraph-integration.md  persistent-policy-and-audit-store.md  policy-format.md  policy-model.md  pricing.md  product-positioning.md  release-checklist.md  release-notes.md  security-model.md  security-whitepaper.md  stripe-entitlement-billing.md  v0.1.0-dev-release-notes.md  vscode-extension-manual-test.md  vscode-marketplace-publish-runbook.md
epics/: SHIP-001-developer-preview-release.md
progress/: 002-persistent-policy-and-audit-store.md  003-langchain-langgraph-real-integration-tests.md  004-sellable-developer-preview.md  005-readme-3-landing-page.md  006-github-trust-signals.md  007-architecture-mermaid-diagrams.md  008-demo-experience.md  009-packaging-and-release.md  010-release-candidate-polish.md  011-security-whitepaper.md  012-design-partner-kit.md  013-pricing-and-landing-copy.md  014-stripe-entitlement-billing.md  015-billing-provider-abstraction.md  016-vscode-marketplace-extension.md  current.md  history.md  review_001-dynamic-tool-router.md  review_002-persistent-policy-and-audit-store.md  review_003-langchain-langgraph-real-integration-tests.md  review_004-sellable-developer-preview.md  review_005-readme-3-landing-page.md  (+10 more)
(+85 files in other folders)
