[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-dynamic-tool-router"
version = "0.1.0.dev0"
description = "Runtime tool authorization for AI agents."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "BernydotJar" }]
license = { file = "LICENSE" }
keywords = [
  "ai-agents",
  "langchain",
  "langgraph",
  "tool-routing",
  "authorization",
  "agent-governance",
  "runtime-policy",
  "mcp"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.optional-dependencies]
integrations = [
  "langchain-core>=0.2",
  "langgraph>=0.2"
]
dev = [
  "build>=1.2"
]

[project.urls]
Homepage = "https://github.com/BernydotJar/LangChain-Dynamic-Tool-Router-for-Agents-"
Repository = "https://github.com/BernydotJar/LangChain-Dynamic-Tool-Router-for-Agents-"
Issues = "https://github.com/BernydotJar/LangChain-Dynamic-Tool-Router-for-Agents-/issues"

[tool.setuptools.packages.find]
where = ["src"]
